Master must send ACK through queue, slaves must send it asynchronously
Fixes #16

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mocha": "*",
     "expect.js": "*",
     "ottypes": "*",
-    "mux-dmx": "*"
+    "mux-dmx": "*",
+    "through2": "*"
   },
   "author": "Marcel Klehr <mklehr@gmx.net>",
   "license": [
