--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "author": "Marcel Klehr <mklehr@gmx.net>",
   "license": [
     {
-      "type": "GPL",
-      "url": "http://opensource.org/licenses/GPL-3.0"
+      "type": "LGPL-3.0",
+      "url": "http://opensource.org/licenses/LGPL-3.0"
     }
   ],
   "readmeFilename": "README.md"
