--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/marcelklehr/gulf.git"
   },
   "dependencies": {
+    "debug": "^2.2",
     "setimmediate": "1.x",
     "queue": "3.x"
   },
