--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
+    "core-js": "2.x",
     "co": "4.x",
     "debug": "^2.2",
     "queue": "3.x",
