--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   ],
   "main": "./lib/index",
   "scripts": {
-    "test": "mocha test/tests.js && zuul -- test/tests.es5.js",
-    "test-local": "mocha test/tests.js && zuul --local -- test/tests.es5.js",
+    "test-browser-cloud": "mocha test/tests.js && zuul -- test/tests.es5.js",
+    "test-browser-local": " zuul --local -- test/tests.es5.js",
+    "test": "mocha test/tests.js",
     "build": "babel src --out-dir lib; babel test/tests.js --out-file test/tests.es5.js"
   },
   "babel": {
